--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,475 @@
+@font-face {
+  font-family: "Geist";
+  src: url(../fonts/GeistVF.ttf?cd0abcebb928023bf404d40e3d5d9bdb) format("truetype-variations"), url(../fonts/GeistVF.woff?c14dabdcab679dcff0267f6a8afdd6d9) format("woff-variations"), url(../fonts/GeistVF.woff2?6dcbe209be934f5801e78da0c5cfae71) format("woff2 supports variations"), url(../fonts/GeistVF.woff2?6dcbe209be934f5801e78da0c5cfae71) format("woff2-variations");
+  font-weight: 400 700;
+}
+@font-face {
+  font-family: "ALTMariaClara-Light";
+  src: url(../fonts/ALTMariaClara-Light.ttf?400374a20c6f01fd0210a0d35d62aa5a) format("truetype"), url(../fonts/ALTMariaClara-Light.woff?0cf1294a728680d50d6c290c3b966b8b) format("woff"), url(../fonts/ALTMariaClara-Light.woff2?ff1a1873de094136d0e215230cd4e65c) format("woff2");
+  font-weight: normal;
+}
+:root {
+  --font-sans: "Geist", sans-serif;
+  --font-serif: "ALTMariaClara-Light", serif;
+  --font-size-sm: clamp(13.33px, 0.01vi + 13.3px, 13.5px);
+  --font-size-base: clamp(16px, 0.1vi + 15.6px, 18px);
+  --font-size-md: clamp(19.2px, 0.24vi + 18.24px, 23.99px);
+  --font-size-lg: clamp(23.04px, 0.45vi + 21.25px, 31.98px);
+  --font-size-xl: clamp(27.65px, 0.75vi + 24.65px, 42.63px);
+  --font-size-2xl: clamp(33.18px, 1.18vi + 28.45px, 56.83px);
+  --font-size-3xl: clamp(39.81px, 1.8vi + 32.62px, 75.76px);
+  --font-size-4xl: clamp(47.78px, 2.66vi + 37.13px, 100.98px);
+  --color-white: #f0edea;
+  --color-green: #29382b;
+  --spacer-x: clamp(16px, 1.6vi + 9.6px, 48px);
+  --spacer-y: clamp(16px, 0.8vi + 12.8px, 32px);
+  --spacer-y-x2: calc(var(--spacer-y) * 2);
+  --spacer-y-x3: calc(var(--spacer-y) * 3);
+  --spacer-y-x4: calc(var(--spacer-y) * 4);
+}
 
+* {
+  box-sizing: border-box;
+}
+
+::-moz-selection {
+  color: var(--color-grey-darkest);
+  background: rgba(255, 81, 0, 0.99);
+}
+
+::selection {
+  color: var(--color-grey-darkest);
+  background: rgba(255, 81, 0, 0.99);
+}
+
+html, body {
+  scroll-behavior: auto !important;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-sans);
+  font-weight: 400;
+  font-size: var(--font-size-base);
+  line-height: 1.5;
+  letter-spacing: -0.01em;
+  border: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  color: var(--color-green);
+  background: var(--color-white);
+}
+body.no-scroll {
+  overflow: hidden;
+  padding-right: var(--body-scrollbar-width);
+}
+
+img, svg {
+  display: block;
+  max-width: 100%;
+}
+
+svg {
+  overflow: visible;
+}
+
+iframe {
+  display: block;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: normal;
+}
+
+a, button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-grey-darkest);
+}
+
+button {
+  padding: 0;
+  font-family: var(--font-primary);
+  border: none;
+  border-radius: 0;
+  background: none;
+}
+
+button,
+input,
+select,
+textarea {
+  outline: none;
+  box-shadow: none;
+}
+button:focus, button:active,
+input:focus,
+input:active,
+select:focus,
+select:active,
+textarea:focus,
+textarea:active {
+  outline: none;
+  box-shadow: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+.lenis.lenis-stopped body {
+  padding-right: var(--body-scrollbar-width);
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
+
+.sans {
+  font-family: var(--font-sans);
+}
+
+.serif {
+  font-family: var(--font-serif);
+}
+
+.font-size-sm {
+  font-size: var(--font-size-sm);
+}
+
+.font-size-base {
+  font-size: var(--font-size-base);
+}
+
+.font-size-md {
+  font-size: var(--font-size-md);
+}
+
+.font-size-lg {
+  font-size: var(--font-size-lg);
+  line-height: 1;
+}
+
+.font-size-xl {
+  font-size: var(--font-size-xl);
+  line-height: 1;
+}
+
+.font-size-2xl {
+  font-size: var(--font-size-2xl);
+  line-height: 1;
+}
+
+.font-size-3xl {
+  font-size: var(--font-size-3xl);
+  line-height: 1;
+}
+
+.font-size-4xl {
+  font-size: var(--font-size-4xl);
+  line-height: 1;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.px-1 {
+  padding-left: var(--spacer-x);
+  padding-right: var(--spacer-x);
+}
+
+.py-1 {
+  padding-top: var(--spacer-y);
+  padding-bottom: var(--spacer-y);
+}
+
+.py-2 {
+  padding-top: var(--spacer-y-x2);
+  padding-bottom: var(--spacer-y-x2);
+}
+
+.py-3 {
+  padding-top: var(--spacer-y-x3);
+  padding-bottom: var(--spacer-y-x3);
+}
+
+.py-4 {
+  padding-top: var(--spacer-y-x4);
+  padding-bottom: var(--spacer-y-x4);
+}
+
+.siteHeader {
+  display: flex;
+  align-items: center;
+  padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
+  box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
+}
+.siteHeader .left,
+.siteHeader .right {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+.siteHeader .right {
+  justify-content: flex-end;
+}
+
+.siteFooter {
+  border-top: 1px solid rgba(25, 27, 25, 0.1);
+}
+.siteFooterCta, .siteFooterLinks {
+  display: flex;
+  text-align: center;
+}
+.siteFooterCta {
+  flex-direction: column;
+  align-items: center;
+  padding: var(--spacer-y-x4) var(--spacer-x);
+  border-bottom: 1px solid rgba(25, 27, 25, 0.1);
+}
+.siteFooterCta .logo {
+  height: calc(var(--font-size-xl) * 2);
+}
+.siteFooterCta .logo svg {
+  width: auto;
+  height: 100%;
+}
+.siteFooterCta .logo + .heading {
+  margin-top: 1em;
+}
+.siteFooterCta .heading {
+  max-width: 9em;
+}
+.siteFooterLinks {
+  flex-wrap: wrap;
+  row-gap: 2rem;
+  padding: 3rem var(--spacer-x) 1.5rem var(--spacer-x);
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterLinks {
+    row-gap: 0;
+    padding: 0;
+    border-bottom: 1px solid rgba(25, 27, 25, 0.1);
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterLinks {
+    row-gap: 2rem;
+    padding: 2rem var(--spacer-x);
+  }
+}
+.siteFooterLinks .item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterLinks .item {
+    width: 50%;
+    padding: 2rem var(--spacer-x);
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterLinks .item {
+    width: 25%;
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterLinks .item:nth-child(odd) {
+    border-right: 1px solid rgba(25, 27, 25, 0.1);
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterLinks .item:nth-child(odd) {
+    border-right: none;
+  }
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterLinks .item:not(:last-child):not(:nth-last-child(2)) {
+    border-bottom: 1px solid rgba(25, 27, 25, 0.1);
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterLinks .item:not(:last-child):not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterLinks .item:not(:last-child) {
+    border-right: 1px solid rgba(25, 27, 25, 0.1);
+  }
+}
+.siteFooterLinks .item a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.2em;
+}
+.siteFooterLinks .item a:hover .link::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.siteFooterLinks .heading {
+  font-weight: 500;
+}
+.siteFooterLinks .link {
+  position: relative;
+}
+.siteFooterLinks .link::before, .siteFooterLinks .link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+}
+.siteFooterLinks .link::before {
+  background: rgba(25, 27, 25, 0.1);
+}
+.siteFooterLinks .link::after {
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+}
+.siteFooterBottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
+  padding: 1.5rem var(--spacer-x) 3rem var(--spacer-x);
+  font-size: 0.6rem;
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterBottom {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1.5em;
+    padding: 1.5rem var(--spacer-x);
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .siteFooterBottom {
+    justify-content: space-between;
+  }
+}
+.siteFooterBottom ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
+}
+@media only screen and (min-width: 720px) {
+  .siteFooterBottom ul {
+    flex-direction: row;
+    gap: 1.5em;
+  }
+}
+.siteFooterBottom ul li a {
+  position: relative;
+  display: inline-block;
+}
+.siteFooterBottom ul li a::before, .siteFooterBottom ul li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+}
+.siteFooterBottom ul li a::before {
+  background: rgba(25, 27, 25, 0.1);
+}
+.siteFooterBottom ul li a::after {
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+}
+.siteFooterBottom ul li a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 2.5rem;
+  padding: 0 1.25rem;
+  font-weight: 500;
+  font-size: 0.7rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  color: var(--color-white);
+  border-radius: 0.25rem;
+  background: var(--color-green);
+}
+.btn__stroke {
+  color: var(--color-green);
+  border: 1px solid rgba(25, 27, 25, 0.2);
+  background: transparent;
+}
+
+h1 + .btn,
+h2 + .btn,
+h3 + .btn,
+h4 + .btn,
+h5 + .btn,
+h6 + .btn {
+  margin-top: 2.5rem;
+}
+
+.siteMenuToggle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  width: 2rem;
+  height: 2rem;
+}
+.siteMenuToggle span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: var(--color-green);
+}
