--- a/src/scss/globals/_base.scss
+++ b/src/scss/globals/_base.scss
@@ -3,8 +3,8 @@
 }
 
 ::selection {
-    color: var(--color-grey-darkest);
-    background: rgba(255,81,0,0.99);
+    color: var(--color-white);
+    background: rgba(221,142,25,0.99);
 }
 
 html, body {
