--- a/src/scss/globals/index.scss
+++ b/src/scss/globals/index.scss
@@ -5,5 +5,9 @@
 @import "header";
 @import "footer";
 
+@import "accordion";
 @import "buttons";
+@import "grid";
+@import "layout";
 @import "menu";
+@import "richtext";
