--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1070,6 +1070,28 @@ html.lenis, html.lenis body {
 .siteFooter {
   border-top: 1px solid rgba(25, 27, 25, 0.1);
 }
+.siteFooterLogo {
+  position: relative;
+  width: calc(var(--font-size-xl) * 2);
+  height: calc(var(--font-size-xl) * 2);
+}
+.siteFooterLogo .type,
+.siteFooterLogo .mark {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.siteFooterLogo .type {
+  background-image: url(../images/footer-logo-type.svg?470513f5cf18201ab52df0e8da2dcd4e);
+}
+.siteFooterLogo .mark {
+  background-image: url(../images/footer-logo-mark.svg?fa7bb80c7ca88c76b38df924d3d6622c);
+}
 .siteFooterCta, .siteFooterLinks {
   display: flex;
   text-align: center;
@@ -1080,14 +1102,7 @@ html.lenis, html.lenis body {
   padding: var(--spacer-y-x4) var(--spacer-x);
   border-bottom: 1px solid rgba(25, 27, 25, 0.1);
 }
-.siteFooterCta .logo {
-  height: calc(var(--font-size-xl) * 2);
-}
-.siteFooterCta .logo svg {
-  width: auto;
-  height: 100%;
-}
-.siteFooterCta .logo + .heading {
+.siteFooterCta .siteFooterLogo + .heading {
   margin-top: 1em;
 }
 .siteFooterCta .heading {
@@ -1914,7 +1929,7 @@ h6 + .btn {
   width: 3rem;
   height: 100%;
   padding: 0 0.25rem;
-  background: red;
+  color: var(--color-green);
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
