--- a/src/scss/globals/_footer.scss
+++ b/src/scss/globals/_footer.scss
@@ -1,6 +1,32 @@
 .siteFooter {
     border-top: 1px solid rgba(25,27,25,0.1);
 
+    &Logo {
+        position: relative;
+        width: calc(var(--font-size-xl) * 2);
+        height: calc(var(--font-size-xl) * 2);
+
+        .type,
+        .mark {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+
+        .type {
+            background-image: url('../../img/footer-logo-type.svg');
+        }
+
+        .mark {
+            background-image: url('../../img/footer-logo-mark.svg');
+        }
+    }
+
     &Cta,
     &Links {
         display: flex;
@@ -13,13 +39,7 @@
         padding: var(--spacer-y-x4) var(--spacer-x);
         border-bottom: 1px solid rgba(25,27,25,0.1);
 
-        .logo {
-            height: calc(var(--font-size-xl) * 2);
-
-            svg {
-                width: auto;
-                height: 100%;
-            }
+        .siteFooterLogo {
 
             + .heading {
                 margin-top: 1em;
