--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -64,7 +64,7 @@
         width: 3rem;
         height: 100%;
         padding: 0 0.25rem;
-        background: red;
+        color: var(--color-green);
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
