--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -37,6 +37,7 @@
     --color-green: #29382b;
     --color-yellow: #dd8e19;
     --color-offwhite: #e0dad5;
+    --color-dark: #191b19;
 
     // Spacing
     --spacer-x: clamp(16px, 1.6vi + 9.6px, 48px);
