--- a/src/scss/globals/index.scss
+++ b/src/scss/globals/index.scss
@@ -7,7 +7,9 @@
 
 @import "accordion";
 @import "buttons";
+@import "carousel";
 @import "grid";
 @import "layout";
 @import "menu";
 @import "richtext";
+@import "typography";
