--- a/public/css/app.css
+++ b/public/css/app.css
@@ -766,6 +766,7 @@ button.swiper-pagination-bullet {
   --color-green: #29382b;
   --color-yellow: #dd8e19;
   --color-offwhite: #e0dad5;
+  --color-dark: #191b19;
   --spacer-x: clamp(16px, 1.6vi + 9.6px, 48px);
   --spacer-y: clamp(16px, 0.8vi + 12.8px, 32px);
   --spacer-y-x2: calc(var(--spacer-y) * 2);
@@ -1039,6 +1040,18 @@ html.lenis, html.lenis body {
   width: 100%;
 }
 
+.text-block-9 {
+  max-width: 9em;
+}
+
+.text-block-10 {
+  max-width: 10em;
+}
+
+.text-block-20 {
+  max-width: 20em;
+}
+
 .text-block-30 {
   max-width: 30em;
 }
@@ -1051,9 +1064,18 @@ html.lenis, html.lenis body {
   max-width: 40em;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .siteHeader {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  top: 0;
   display: flex;
   align-items: center;
+  width: 100%;
   padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
   box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
 }
@@ -1065,6 +1087,17 @@ html.lenis, html.lenis body {
 }
 .siteHeader .right {
   justify-content: flex-end;
+}
+.siteHeaderInverted {
+  color: var(--color-white);
+  box-shadow: 0px 1px 0px 0px rgba(240, 237, 234, 0.1);
+}
+.siteHeaderInverted .siteMenuToggle span {
+  background: var(--color-white);
+}
+.siteHeaderInverted .btnStroke {
+  color: var(--color-white);
+  border: 1px solid rgba(240, 237, 234, 0.1);
 }
 
 .siteFooter {
@@ -1367,8 +1400,51 @@ h2 + .btn,
 h3 + .btn,
 h4 + .btn,
 h5 + .btn,
-h6 + .btn {
+h6 + .btn,
+.richtext + .btn {
   margin-top: 2.5rem;
+}
+
+.carouselFooter {
+  display: flex;
+  align-items: center;
+  gap: var(--spacer-x);
+  margin-top: var(--spacer-y);
+}
+.carouselFooter .nav {
+  display: flex;
+  gap: calc(var(--spacer-x) * 0.5);
+}
+.carouselFooter .prev,
+.carouselFooter .next {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-green);
+}
+.carouselFooter .prev svg,
+.carouselFooter .next svg {
+  width: 2rem;
+  height: 2rem;
+}
+.carouselFooter .scrollbar {
+  flex: 1;
+  height: 1px;
+  background: rgba(25, 27, 25, 0.2);
+}
+.carouselFooter .scrollbar .swiper-scrollbar-drag {
+  background: var(--color-green);
+}
+
+.bg-green .carouselFooter .prev,
+.bg-green .carouselFooter .next {
+  color: var(--color-white);
+}
+.bg-green .carouselFooter .scrollbar {
+  background: rgba(240, 237, 234, 0.2);
+}
+.bg-green .carouselFooter .scrollbar .swiper-scrollbar-drag {
+  background: var(--color-white);
 }
 
 .container {
@@ -1868,6 +1944,51 @@ h6 + .btn {
   max-width: 100%;
 }
 
+.hero {
+  --header-height: calc((var(--spacer-y) * 1.5) + 2.5rem);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-top: var(--header-height);
+  color: var(--color-white);
+  background-color: var(--color-dark);
+}
+.hero > *:not(.heroBg) {
+  position: relative;
+  z-index: 2;
+}
+.heroFull {
+  min-height: 100vh;
+  min-height: 100svh;
+}
+.heroMain {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.heroBg {
+  position: absolute;
+  z-index: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+.heroBg img,
+.heroBg video {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .split {
   display: flex;
   flex-wrap: wrap;
@@ -1884,6 +2005,14 @@ h6 + .btn {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+.splitTextBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.splitTextBlock + .splitTextBlock {
+  margin-top: var(--spacer-y-x2);
 }
 .splitMedia {
   position: relative;
@@ -1997,6 +2126,18 @@ h6 + .richtext {
   margin-top: calc(var(--spacer-y) * 1.5);
 }
 
+.subheading {
+  letter-spacing: 0.05em;
+}
+.subheading + h1,
+.subheading + h2,
+.subheading + h3,
+.subheading + h4,
+.subheading + h5,
+.subheading + h6 {
+  margin-top: 2rem;
+}
+
 .contactDetailsHeading {
   font-size: 0.7rem;
   text-transform: uppercase;
@@ -2076,4 +2217,90 @@ h6 + .richtext {
 
 .bg-green .contactDetailsLink span::before {
   background: rgba(240, 237, 234, 0.2);
+}
+
+.newsCard {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.newsCard .image {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-bottom: 120%;
+  border-radius: 0.25rem;
+}
+.newsCard .image img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.newsCard .details {
+  display: flex;
+  gap: 1em;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+.newsCard .category {
+  font-weight: 500;
+}
+.newsCard .title {
+  width: 100%;
+  max-width: 16em;
+  font-size: var(--font-size-md);
+  line-height: 1.3;
+}
+.newsCarousel .carouselFooter {
+  margin-top: var(--spacer-y-x2);
+}
+
+.accommodationCard {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  padding-bottom: 120%;
+  border-radius: 0.25rem;
+}
+.accommodationCard .content,
+.accommodationCard .image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.accommodationCard .content {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: var(--spacer-y);
+}
+.accommodationCard .label {
+  color: var(--color-green);
+  background: var(--color-white);
+}
+.accommodationCard .title {
+  font-size: var(--font-size-md);
+}
+.accommodationCard .image::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50%;
+  background: linear-gradient(180deg, rgba(25, 27, 25, 0) 0%, rgba(25, 27, 25, 0.9) 100%);
+}
+.accommodationCard .image img {
+  z-index: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
