--- a/src/scss/globals/_header.scss
+++ b/src/scss/globals/_header.scss
@@ -1,6 +1,11 @@
 .siteHeader {
+    position: absolute;
+    z-index: 1000;
+    left: 0;
+    top: 0;
     display: flex;
     align-items: center;
+    width: 100%;
     padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
     box-shadow: 0px 1px 0px 0px rgba(25,27,25,0.1);
 
@@ -13,5 +18,22 @@
 
     .right {
         justify-content: flex-end;
+    }
+
+    &Inverted {
+        color: var(--color-white);
+        box-shadow: 0px 1px 0px 0px rgba(240,237,234,0.1);
+
+        .siteMenuToggle {
+
+            span {
+                background: var(--color-white);
+            }
+        }
+
+        .btnStroke {
+            color: var(--color-white);
+            border: 1px solid rgba(240,237,234,0.1);
+        }
     }
 }
