--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -1,3 +1,52 @@
+.hero {
+    --header-height: calc((var(--spacer-y) * 1.5) + 2.5rem);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding-top: var(--header-height);
+    color: var(--color-white);
+    background-color: var(--color-dark);
+
+    > *:not(.heroBg) {
+        position: relative;
+        z-index: 2;
+    }
+
+    &Full {
+        min-height: 100vh;
+        min-height: 100svh;
+    }
+
+    &Main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    &Bg {
+        position: absolute;
+        z-index: 0;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.5;
+
+        img,
+        video {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
 .split {
     display: flex;
     flex-wrap: wrap;
@@ -15,6 +64,16 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+
+        &Block {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            + .splitTextBlock {
+                margin-top: var(--spacer-y-x2);
+            }
+        }
     }
 
     &Media {
