--- a/src/scss/globals/_carousel.scss
+++ b/src/scss/globals/_carousel.scss
@@ -15,10 +15,16 @@
         justify-content: center;
         align-items: center;
         color: var(--color-green);
+        opacity: 1;
+        transition: opacity 0.4s ease;
 
         svg {
-            width: 2rem;
-            height: 2rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
+
+        &.swiper-button-disabled {
+            opacity: 0.2;
         }
     }
 
@@ -47,6 +53,141 @@
 
             .swiper-scrollbar-drag {
                 background: var(--color-white);
+            }
+        }
+    }
+}
+
+// Testimonials carousel
+.testimonialsCarousel {
+    position: relative;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        border: 1px solid rgba(25,27,25,0.2);
+    }
+
+    &::before {
+        left: 0;
+        right: 0;
+        top: 4px;
+        bottom: 4px;
+    }
+
+    &::after {
+        left: 4px;
+        right: 4px;
+        top: 0;
+        bottom: 0;
+    }
+
+    .swiper-wrapper {
+        align-items: center;
+    }
+
+    .prev,
+    .next {
+        position: absolute;
+        z-index: 20;
+        top: 50%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 1.5rem;
+        height: 1.5rem;
+        transform: translateY(-50%);
+
+        @include sm-breakpoint {
+            display: flex;
+        }
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .prev {
+        left: var(--spacer-x);
+    }
+
+    .next {
+        right: var(--spacer-x);
+    }
+
+    .pagination {
+        position: absolute;
+        left: 0;
+        top: calc(100% + 1rem);
+        display: flex;
+        justify-content: center;
+        gap: 0.6rem;
+        width: 100%;
+
+        @include sm-breakpoint {
+            display: none;
+        }
+
+        .swiper-pagination-bullet {
+            width: 6px;
+            height: 6px;
+            margin: 0;
+            border-radius: 50%;
+            background: var(--color-green);
+            opacity: 0.2;
+
+            &-active {
+                opacity: 1;
+            }
+        }
+    }
+
+    &Slide {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: var(--spacer-y-x2) calc(var(--spacer-x) * 1.5);
+
+        @include sm-breakpoint {
+            padding: var(--spacer-y-x2) calc((var(--spacer-x) * 2) + 1.5rem);
+        }
+
+        .quote {
+            max-width: 30em;
+            font-size: var(--font-size-md);
+            line-height: 1.3;
+        }
+
+        .details {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1em;
+            margin-top: var(--font-size-md);
+            font-size: var(--font-size-sm);
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .rating {
+            display: inline-flex;
+            transform: translateY(-0.1em);
+
+            span {
+                display: inline-block;
+                width: 1rem;
+                height: 1rem;
+                background-image: url('../../img/star.svg');
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                opacity: 0.2;
+
+                &.filled {
+                    opacity: 1;
+                }
             }
         }
     }
