--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -159,3 +159,55 @@
     top: 0;
     background: var(--color-white);
 }
+
+.instaFeed {
+
+    &Header {
+        display: flex;
+        justify-content: center;
+        gap: 0.5em;
+        font-size: var(--font-size-sm);
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+
+        .title {
+            font-weight: 500;
+            font-size: var(--font-size-sm);
+        }
+
+        a {
+            position: relative;
+            display: inline-block;
+
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 1px;
+            }
+
+            &::before {
+                background: rgba(25,27,25,0.1);
+            }
+
+            &::after {
+                background: currentColor;
+                transform: scaleX(0);
+                transform-origin: right;
+                transition: transform 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+            }
+
+            &:hover {
+
+                &::after {
+                    transform: scaleX(1);
+                    transform-origin: left;
+                }
+            }
+        }
+    }
+}
