--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,6 +35,7 @@
     // Colour
     --color-white: #f0edea;
     --color-green: #29382b;
+    --color-green-light: #769177;
     --color-yellow: #dd8e19;
     --color-offwhite: #e0dad5;
     --color-dark: #191b19;
