--- a/public/css/app.css
+++ b/public/css/app.css
@@ -764,6 +764,7 @@ button.swiper-pagination-bullet {
   --font-size-4xl: clamp(47.78px, 2.66vi + 37.13px, 100.98px);
   --color-white: #f0edea;
   --color-green: #29382b;
+  --color-green-light: #769177;
   --color-yellow: #dd8e19;
   --color-offwhite: #e0dad5;
   --color-dark: #191b19;
@@ -1373,6 +1374,7 @@ h6 + .accordionContainer {
   align-items: center;
   height: var(--btn-height);
   padding: 0 calc(var(--btn-height) * 0.5);
+  font-family: var(--font-sans);
   font-weight: 500;
   font-size: 0.7rem;
   text-align: center;
@@ -1393,6 +1395,16 @@ h6 + .accordionContainer {
 }
 .btnSm {
   --btn-height: 1.75rem;
+}
+
+.bg-green .btn {
+  color: var(--color-green);
+  background: var(--color-white);
+}
+.bg-green .btnStroke {
+  color: var(--color-white);
+  border: 1px solid rgba(240, 237, 234, 0.2);
+  background: transparent;
 }
 
 h1 + .btn,
@@ -2258,6 +2270,125 @@ h6 + .btn,
   transform-origin: left;
 }
 
+.siteMenu {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.siteMenuClose {
+  position: absolute;
+  z-index: 20;
+  left: var(--spacer-y);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-white);
+}
+.siteMenuClose svg {
+  width: 2rem;
+  height: 2rem;
+}
+.siteMenuMain, .siteMenuNav, .siteMenuContacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.siteMenuMain {
+  gap: var(--spacer-y-x2);
+  width: 100%;
+  padding: var(--spacer-y-x4) var(--spacer-x) var(--spacer-y-x2) var(--spacer-x);
+}
+@media only screen and (min-width: 960px) {
+  .siteMenuMain {
+    width: 50%;
+  }
+}
+.siteMenuNav {
+  flex: 1;
+  justify-content: center;
+  font-size: var(--font-size-xl);
+  visibility: hidden;
+}
+.siteMenuNav a {
+  visibility: visible;
+}
+.siteMenuNav a:not(.btn) {
+  padding: 0.25em 0;
+  line-height: 1;
+  color: var(--color-white);
+  transition: color 0.6s ease;
+}
+.siteMenuNav a.btn {
+  margin-top: calc(var(--font-size-xl) * 0.5);
+}
+.siteMenuNav:hover a:not(.btn) {
+  color: var(--color-green-light);
+}
+.siteMenuNav:hover a:not(.btn):hover {
+  color: var(--color-white);
+}
+.siteMenuContacts {
+  gap: 0.5em;
+  letter-spacing: 0.05em;
+}
+.siteMenuContacts a {
+  position: relative;
+  display: block;
+  color: var(--color-green-light);
+}
+.siteMenuContacts a::before, .siteMenuContacts a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+}
+.siteMenuContacts a::before {
+  background: rgba(240, 237, 234, 0.1);
+}
+.siteMenuContacts a::after {
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+}
+.siteMenuContacts a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.siteMenuImages {
+  position: relative;
+  display: none;
+  width: 50%;
+}
+@media only screen and (min-width: 960px) {
+  .siteMenuImages {
+    display: block;
+  }
+}
+.siteMenuImages .image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
+.siteMenuImages .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.siteMenuImages .image.active {
+  opacity: 1;
+}
 .siteMenuToggle {
   display: flex;
   flex-direction: column;
@@ -2272,6 +2403,10 @@ h6 + .btn,
   width: 100%;
   height: 1px;
   background: var(--color-green);
+}
+
+body.siteMenuOpening .siteMenuToggle, body.siteMenuClosing .siteMenuToggle {
+  pointer-events: none;
 }
 
 .richtext p,
