--- a/src/scss/globals/_carousel.scss
+++ b/src/scss/globals/_carousel.scss
@@ -67,6 +67,7 @@
         content: '';
         position: absolute;
         border: 1px solid rgba(25,27,25,0.2);
+        border-radius: 0.25rem;
     }
 
     &::before {
