--- a/public/css/app.css
+++ b/public/css/app.css
@@ -768,12 +768,14 @@ button.swiper-pagination-bullet {
   --color-yellow: #dd8e19;
   --color-offwhite: #e0dad5;
   --color-dark: #191b19;
+  --gutter-x: clamp(16px, 0.4vi + 14.4px, 24px);
   --spacer-x: clamp(16px, 1.6vi + 9.6px, 48px);
   --spacer-y: clamp(16px, 0.8vi + 12.8px, 32px);
   --spacer-y-x2: calc(var(--spacer-y) * 2);
   --spacer-y-x3: calc(var(--spacer-y) * 3);
   --spacer-y-x4: calc(var(--spacer-y) * 4);
   --spacer-y-x5: calc(var(--spacer-y) * 5);
+  --spacer-y-x6: calc(var(--spacer-y) * 6);
 }
 
 * {
@@ -984,6 +986,10 @@ html.lenis, html.lenis body {
   padding-top: var(--spacer-y-x5);
 }
 
+.pt-6 {
+  padding-top: var(--spacer-y-x6);
+}
+
 .pb-1 {
   padding-bottom: var(--spacer-y);
 }
@@ -1002,6 +1008,10 @@ html.lenis, html.lenis body {
 
 .pb-5 {
   padding-bottom: var(--spacer-y-x5);
+}
+
+.pb-6 {
+  padding-bottom: var(--spacer-y-x6);
 }
 
 .py-1 {
@@ -1027,6 +1037,11 @@ html.lenis, html.lenis body {
 .py-5 {
   padding-top: var(--spacer-y-x5);
   padding-bottom: var(--spacer-y-x5);
+}
+
+.py-6 {
+  padding-top: var(--spacer-y-x6);
+  padding-bottom: var(--spacer-y-x6);
 }
 
 .justify-center {
@@ -1598,6 +1613,18 @@ h6 + .btn,
   margin: 0 auto;
   padding-right: var(--gutter-x);
   padding-left: var(--gutter-x);
+}
+.container.no-gutters {
+  padding-right: 0;
+  padding-left: 0;
+}
+.container.no-gutters .row:not(.container.no-gutters .row--no-gutters):not(.container.no-gutters .row--compact) {
+  margin-right: 0;
+  margin-left: 0;
+}
+.container.no-gutters .row:not(.container.no-gutters .row--no-gutters):not(.container.no-gutters .row--compact) > .col, .container.no-gutters .row:not(.container.no-gutters .row--no-gutters):not(.container.no-gutters .row--compact) > [class^=col-] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .container-fluid {
@@ -2631,6 +2658,26 @@ h6 + .richtext {
   background: rgba(240, 237, 234, 0.2);
 }
 
+.newsListings {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: var(--spacer-y-x2) var(--gutter-x);
+}
+@media only screen and (min-width: 720px) {
+  .newsListings {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .newsListings {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media only screen and (min-width: 2000px) {
+  .newsListings {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 .newsCard {
   display: flex;
   flex-direction: column;
@@ -2651,6 +2698,9 @@ h6 + .richtext {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  transform: scale(1);
+  will-change: transform;
+  transition: transform 0.6s ease;
 }
 .newsCard .details {
   display: flex;
@@ -2667,6 +2717,9 @@ h6 + .richtext {
   max-width: 16em;
   font-size: var(--font-size-md);
   line-height: 1.3;
+}
+.newsCard:hover .image img {
+  transform: scale(1.1);
 }
 .newsCarouselFilter {
   display: inline-flex;
