--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -28,16 +28,19 @@
 .pt-3 { padding-top: var(--spacer-y-x3); }
 .pt-4 { padding-top: var(--spacer-y-x4); }
 .pt-5 { padding-top: var(--spacer-y-x5); }
+.pt-6 { padding-top: var(--spacer-y-x6); }
 .pb-1 { padding-bottom: var(--spacer-y); }
 .pb-2 { padding-bottom: var(--spacer-y-x2); }
 .pb-3 { padding-bottom: var(--spacer-y-x3); }
 .pb-4 { padding-bottom: var(--spacer-y-x4); }
 .pb-5 { padding-bottom: var(--spacer-y-x5); }
+.pb-6 { padding-bottom: var(--spacer-y-x6); }
 .py-1 { padding-top: var(--spacer-y); padding-bottom: var(--spacer-y); }
 .py-2 { padding-top: var(--spacer-y-x2); padding-bottom: var(--spacer-y-x2); }
 .py-3 { padding-top: var(--spacer-y-x3); padding-bottom: var(--spacer-y-x3); }
 .py-4 { padding-top: var(--spacer-y-x4); padding-bottom: var(--spacer-y-x4); }
 .py-5 { padding-top: var(--spacer-y-x5); padding-bottom: var(--spacer-y-x5); }
+.py-6 { padding-top: var(--spacer-y-x6); padding-bottom: var(--spacer-y-x6); }
 
 // Flex
 .justify-center { justify-content: center; }
