--- a/src/scss/templates/_news.scss
+++ b/src/scss/templates/_news.scss
@@ -1,5 +1,23 @@
 .news {
 
+    &Listings {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: var(--spacer-y-x2) var(--gutter-x);
+
+        @include sm-breakpoint {
+            grid-template-columns: repeat(2,1fr);
+        }
+
+        @include lg-breakpoint {
+            grid-template-columns: repeat(3,1fr);
+        }
+
+        @include xxl-breakpoint {
+            grid-template-columns: repeat(4,1fr);
+        }
+    }
+
     &Card {
         display: flex;
         flex-direction: column;
@@ -19,6 +37,9 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transform: scale(1);
+                will-change: transform;
+                transition: transform 0.6s ease;
             }
         }
 
@@ -39,6 +60,16 @@
             max-width: 16em;
             font-size: var(--font-size-md);
             line-height: 1.3;
+        }
+
+        &:hover {
+
+            .image {
+
+                img {
+                    transform: scale(1.1);
+                }
+            }
         }
     }
 
