--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -57,3 +57,7 @@
 
 // Overflow
 .overflow-hidden { overflow: hidden; }
+
+// Border
+.bt-light { border-top: 1px solid rgba(25,27,25,0.1); }
+.bb-light { border-bottom: 1px solid rgba(25,27,25,0.1); }
